--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,10 @@
 
 
 @layer base {
-  h1 {
-    @apply text-3xl bg-orange-500 !important;
+  .app1 h1 {
+    @apply text-3xl bg-orange-500;
   }
   h2 {
-    @apply text-xl bg-fuchsia-300;
+    @apply text-xl bg-fuchsia-300 !important;
   }
 }
