--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,13 @@
   .app1 h1 {
     @apply text-3xl bg-orange-500;
   }
+
   h2 {
-    @apply text-xl bg-fuchsia-300 !important;
+    @apply text-xl bg-fuchsia-300;
   }
+
+  aside {
+    @apply bg-indigo-400;
+  }
+
 }
