--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer base {
   .app1 h1 {
     @apply text-3xl bg-orange-500;
@@ -16,4 +15,26 @@
     @apply bg-indigo-400;
   }
 
+  nav {
+    margin: 0;
+    width: 100%;
+    height: 80px;
+    background-color: rgb(69, 62, 249);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    text-decoration: none;
+  }
+
+  nav a {
+    color: white;
+    text-decoration: none;
+    margin: 20px;
+    font-size: 25px;
+  }
+
+  input[type=text] {
+    color: brown;
+  }
 }
